--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,11 +16,11 @@
         min-height: 400px;
         margin-bottom: 160px;
         margin-top: 160px
-    } 
+    }
     .css-xvauwm {
         min-height: 400px;
         margin-bottom: 160px;
-       
+        margin: 0 6em;
     }
 }
 
